--- a/recipes/apple-crisp.html
+++ b/recipes/apple-crisp.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Apple Crisp</h1>
     <img src="/images/apple-crisp.jpg">
-    <p>This is an easy to make fried rice using fresh veggies, ginger, garlic and sesame oil. This can be made with vegetables you already have in the fridge or fresh from the farmer's market. Add chicken or tofu for some extra protein.</p>
+    <p>This is a recipe for a classic old fashioned style apple crisp. You can use any kind of apple, but I recommend Granny Smith because the sourness creates a more complex flavor profile in juxtoposition to the sweetness.</p>
 
     <h3>Apple Ingredients:</h3>
     <ul>
@@ -38,9 +38,8 @@
         <li>In the same large bowl as the apples - don't bother washing it - mix together all the dry ingredients for the topping. Once mixed add softened butter and knead with your hands until the topping is homogenous.</li>
         <li>Pour topping over the apples and press down into all the nooks and crannies.</li>
         <li>Bake on the middle rack of the oven for 45 to 50 minutes, until the top is a golden brown and the liquid starts bubbling around the edges.</li>
-        <li>Let cool and serve warm with vanilla icecream.</li>
-        
+        <li>Let cool and serve warm with vanilla ice cream.</li>
     </ol>
-
+    <a href="/index.html">BACK</a>
 </body>
 </html>
