Update recipes with CSS

--- a/recipes/apple-crisp.html
+++ b/recipes/apple-crisp.html
@@ -1,45 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Apple Crisp</title>
-</head>
-<body>
-    <h1>Apple Crisp</h1>
-    <img src="/images/apple-crisp.jpg">
-    <p>This is a recipe for a classic old fashioned style apple crisp. You can use any kind of apple, but I recommend Granny Smith because the sourness creates a more complex flavor profile in juxtoposition to the sweetness.</p>
-
-    <h3>Apple Ingredients:</h3>
-    <ul>
-        <li>5lb bag of granny smith apples</li>
-        <li>1 cup coconut sugar</li>
-        <li>2 tablespoons cinnamon</li>
-
-    </ul>
-    
-    <h3>Topping Ingredients:</h3>
-    <ul>
-        <li>1 cup coconut sugar</li>
-        <li>2 tablespoons cinnamon</li>
-        <li>Juice of 1 lemon</li>
-        <li>1/2 teaspoon vanilla extract</li>
-        <li>3/4 cup all purpose flour</li>
-        <li>1 cup rolled oats</li>
-        <li>1 stick unsalted butter</li>
-        <li>a pinch of salt</li>
-    </ul>
-
-    <h3>Steps:</h3>
-    <ol>
-        <li>Preheat oven to 350 degrees Fahrenheit.</li>
-        <li>Chop all your apples and combine in a large bowl with the coconut sugar, cinnamon and lemon juice.</li>
-        <li>Pour apples into a pyrex baking pan large enough so they all go below the edge.</li>
-        <li>In the same large bowl as the apples - don't bother washing it - mix together all the dry ingredients for the topping. Once mixed add softened butter and knead with your hands until the topping is homogenous.</li>
-        <li>Pour topping over the apples and press down into all the nooks and crannies.</li>
-        <li>Bake on the middle rack of the oven for 45 to 50 minutes, until the top is a golden brown and the liquid starts bubbling around the edges.</li>
-        <li>Let cool and serve warm with vanilla ice cream.</li>
-    </ol>
+  </head>
+  <body>
+    <div class="overall div1">
+      <h1>Apple Crisp</h1>
+      <img class="imgsize div1" src="/images/apple-crisp.jpg" />
+      <div class="div1 des">
+        <p>
+          This is a recipe for a classic old fashioned style apple crisp. You
+          can use any kind of apple, but I recommend Granny Smith because the
+          sourness creates a more complex flavor profile in juxtoposition to the
+          sweetness.
+        </p>
+      </div>
+      <div class="div1 ingredients">
+        <h3>Apple Ingredients:</h3>
+        <ul>
+          <li>5lb bag of granny smith apples</li>
+          <li>1 cup coconut sugar</li>
+          <li>2 tablespoons cinnamon</li>
+        </ul>
+        <h3>Topping Ingredients:</h3>
+        <ul>
+          <li>1 cup coconut sugar</li>
+          <li>2 tablespoons cinnamon</li>
+          <li>Juice of 1 lemon</li>
+          <li>1/2 teaspoon vanilla extract</li>
+          <li>3/4 cup all purpose flour</li>
+          <li>1 cup rolled oats</li>
+          <li>1 stick unsalted butter</li>
+          <li>a pinch of salt</li>
+        </ul>
+      </div>
+      <div class="div1 steps">
+        <h3>Steps:</h3>
+        <ol>
+          <li>Preheat oven to 350 degrees Fahrenheit.</li>
+          <li>
+            Chop all your apples and combine in a large bowl with the coconut
+            sugar, cinnamon and lemon juice.
+          </li>
+          <li>
+            Pour apples into a pyrex baking pan large enough so they all go
+            below the edge.
+          </li>
+          <li>
+            In the same large bowl as the apples - don't bother washing it - mix
+            together all the dry ingredients for the topping. Once mixed add
+            softened butter and knead with your hands until the topping is
+            homogenous.
+          </li>
+          <li>
+            Pour topping over the apples and press down into all the nooks and
+            crannies.
+          </li>
+          <li>
+            Bake on the middle rack of the oven for 45 to 50 minutes, until the
+            top is a golden brown and the liquid starts bubbling around the
+            edges.
+          </li>
+          <li>Let cool and serve warm with vanilla ice cream.</li>
+        </ol>
+      </div>
+    </div>
     <a href="/index.html">BACK</a>
-</body>
+  </body>
 </html>
