--- a/recipes/prawn-noodles.html
+++ b/recipes/prawn-noodles.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Prawn Noodles</title>
-</head>
-<body>
-    <h1>Prawn Noodles</h1>
-    <img src="/images/prawn-noodles.jpg">
-    <p><em>This super-quick noodle dish is an absolute winner when you’re in need of a speedy weeknight dinner fix. Garlic, prawns, chewy noodles, a glossy sauce… what’s not to love? Totally slurp-tastic.</em></p>
+  </head>
+  <body>
+    <div class="overall div1">
+      <h1>Prawn Noodles</h1>
 
-    <h3>Ingredients:</h3>
-    <ul>
-        <li>2 7 oz packets pre-cooked udon noodles</li>
-        <li>1 tsp sesame oil</li>
-        <li>2 tbsp vegetable oil</li>
-        <li>2 cups sliced cabbage</li>
-        <li>½ tsp sugar, plus ½ tsp set aside</li>
-        <li>½ tbsp soy sauce, plus 1½ set aside</li>
-        <li>4 garlic cloves, minced</li>
-        <li>7 oz peeled and deveined prawns</li>
-        <li>½ tsp chilli flakes</li>
-        <li>3 tbsp oyster sauce</li>
-        <li>½ cup finely sliced spring onion (scallions)</li>
-    </ul>
+      <img class="imgsize div1" src="/images/prawn-noodles.jpg" />
 
-    <h3>Steps:</h3>
-    <ol>
-        <li>Place the udon noodles into a pot of boiling water. Use tongs to gently separate the noodles and as soon as they have come apart, transfer the noodles to a large bowl. Toss with sesame oil.</li>
-        <li>Heat the vegetable oil in a wok or frying pan over high heat. Add the cabbage and stir-fry until just starting to char. Then add the ½ tsp of sugar and the ½ tbsp of soy sauce. Stir-fry for another minute or until the cabbage is nicely coloured. Add the garlic and stir-fry for 20 seconds. Then add the prawns and chilli powder and stir-fry until the prawns are just cooked.</li>
-        <li>Add the noodles, remaining soy sauce, remaining sugar and oyster sauce. Stir-fry for another half a minute until the sauce has thickened. Toss through the spring onion and serve.</li>
-    </ol>
-    <a href="/index.html">BACK</a>
-</body>
+      <div class="div1 des">
+        <p>
+          <em
+            >This super-quick noodle dish is an absolute winner when you’re in
+            need of a speedy weeknight dinner fix. Garlic, prawns, chewy
+            noodles, a glossy sauce… what’s not to love? Totally
+            slurp-tastic.</em
+          >
+        </p>
+      </div>
+
+      <div class="div1 ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+          <li>2 7 oz packets pre-cooked udon noodles</li>
+          <li>1 tsp sesame oil</li>
+          <li>2 tbsp vegetable oil</li>
+          <li>2 cups sliced cabbage</li>
+          <li>½ tsp sugar, plus ½ tsp set aside</li>
+          <li>½ tbsp soy sauce, plus 1½ set aside</li>
+          <li>4 garlic cloves, minced</li>
+          <li>7 oz peeled and deveined prawns</li>
+          <li>½ tsp chilli flakes</li>
+          <li>3 tbsp oyster sauce</li>
+          <li>½ cup finely sliced spring onion (scallions)</li>
+        </ul>
+      </div>
+
+      <div class="div1 steps">
+        <h3>Steps:</h3>
+        <ol>
+          <li>
+            Place the udon noodles into a pot of boiling water. Use tongs to
+            gently separate the noodles and as soon as they have come apart,
+            transfer the noodles to a large bowl. Toss with sesame oil.
+          </li>
+          <li>
+            Heat the vegetable oil in a wok or frying pan over high heat. Add
+            the cabbage and stir-fry until just starting to char. Then add the ½
+            tsp of sugar and the ½ tbsp of soy sauce. Stir-fry for another
+            minute or until the cabbage is nicely coloured. Add the garlic and
+            stir-fry for 20 seconds. Then add the prawns and chilli powder and
+            stir-fry until the prawns are just cooked.
+          </li>
+          <li>
+            Add the noodles, remaining soy sauce, remaining sugar and oyster
+            sauce. Stir-fry for another half a minute until the sauce has
+            thickened. Toss through the spring onion and serve.
+          </li>
+        </ol>
+      </div>
+
+      <a href="/index.html">BACK</a>
+    </div>
+  </body>
 </html>
