--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Delish Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
+    <div class="overall div1 landing">
+    <h1>Tip Top Delish Recipes</h1>
     <ul>
         <li><a href="/recipes/fried-rice.html">Fried Rice</a></li>
         <li><a href="/recipes/apple-crisp.html">Apple Crisp</a></li>
         <li><a href="/recipes/prawn-noodles.html">Prawn Noodles</a></li>
     </ul>
-    
-    
+    </div>
 </body>
 </html>
